# pibayer

./: .coveragerc  .gitignore  .travis.yml  PrintTiffTags.py  README.md  README.rst  getrawimage.py  params.py  pyproject.toml  rawbayer.py  requirements.txt  setup.cfg  setup.py
archive/: PrintTiffTags.py  legacy.py
pibayer/: __init__.py  base.py  io.py  legacy.py  utils.py
src/pibayer/: __init__.py  base.py  utils.py
src/pibayer/tests/: test_mod.py
tests/: test.py  test_mod.py
