[metadata]
name = pibayer
version = 0.6.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/raspicam-raw-bayer
description = Acquire raw Bayer-masked image from Raspberry Pi camera and write image stack to HDF5 or TIFF.
keywords =
  raspberry pi
  pi camera
  bayer
  raw image
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Scientific/Engineering :: Medical Science Apps.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  picamera
  numpy
  xarray
  imageio>=2.3

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
io =
  tifffile
  h5py
  netCDF4
plot =
  matplotlib
  
[options.entry_points]
console_scripts =

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
