[metadata]
name = pibayer
version = 0.6.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/raspicam-raw-bayer
description = Acquire raw Bayer-masked image from Raspberry Pi camera and write image stack to HDF5 or TIFF.
keywords =
  raspberry pi
  pi camera
  bayer
  raw image
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Scientific/Engineering :: Medical Science Apps.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  picamera
  numpy
  xarray
  imageio>=2.3
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
  flake8
  mypy
io =
  tifffile
  h5py
  netCDF4
plot =
  matplotlib
